misc/iptables.save
# Default
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp -d 172.31.0.0/16 --dport 10050 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 655 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 655 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT
-A OUTPUT -p tcp -m tcp -m multiport -d 172.31.0.0/16 --dports 22,80,443,10051 -j ACCEPT
-A OUTPUT -p tcp -m tcp -m multiport -d ioibackup1.ioi2021.sg --dports 22,80,443 -j ACCEPT
-A OUTPUT -p tcp -m tcp -m multiport -d ioibackup2.ioi2021.sg --dports 22,80,443 -j ACCEPT
-A OUTPUT -p tcp -m tcp -m multiport -d pop.ioi2021.sg --dports 80,443 -j ACCEPT
COMMIT
